--- a/views/about.jade
+++ b/views/about.jade
@@ -1,10 +1,9 @@
 extends layout
-link(href='/css/app.css', rel='stylesheet')
 
 block content
   div.blog_post
     h2.post_title
       About
     div.post_body
-      p
-        This was mainly a project to teach myself some more about nodejs.
+      p This is a blogsite, by David Hines, mainly built as a project to learn more about nodejs, express, and mongodb.
+      p David Hines is a software developer from Nova Scotia, Canada. He started off writing desktop java solutions, then naturally learned J2EE, and now works mainly with the javascript stack.
