Added simpleMDE to the posts admin panel.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -94,3 +94,94 @@ tr:nth-child(odd) td { background: #FEFEFE; }
 
 tr td:hover { background: #666; color: #FFF; }
 /* Hover cell effect! */
+
+
+.control_group{
+  border: 0;
+}
+
+
+.pretty-form {
+    margin:10px auto;
+    max-width: 400px;
+    padding: 20px 12px 10px 20px;
+    font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    float:left;
+}
+.pretty-form li {
+    padding: 0;
+    display: block;
+    list-style: none;
+    margin: 10px 0 0 0;
+}
+.pretty-form label{
+    margin:0 0 3px 0;
+    padding:0px;
+    display:block;
+    font-weight: bold;
+}
+.pretty-form input[type=text],
+.pretty-form input[type=date],
+.pretty-form input[type=datetime],
+.pretty-form input[type=number],
+.pretty-form input[type=search],
+.pretty-form input[type=time],
+.pretty-form input[type=url],
+.pretty-form input[type=email],
+textarea,
+select{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border:1px solid #BEBEBE;
+    padding: 7px;
+    margin:0px;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;
+}
+.pretty-form input[type=text]:focus,
+.pretty-form input[type=date]:focus,
+.pretty-form input[type=datetime]:focus,
+.pretty-form input[type=number]:focus,
+.pretty-form input[type=search]:focus,
+.pretty-form input[type=time]:focus,
+.pretty-form input[type=url]:focus,
+.pretty-form input[type=email]:focus,
+.pretty-form textarea:focus,
+.pretty-form select:focus{
+    -moz-box-shadow: 0 0 8px #88D5E9;
+    -webkit-box-shadow: 0 0 8px #88D5E9;
+    box-shadow: 0 0 8px #88D5E9;
+    border: 1px solid #88D5E9;
+}
+.pretty-form .field-divided{
+    width: 49%;
+}
+
+.pretty-form .field-long{
+    width: 100%;
+}
+.pretty-form .field-select{
+    width: 100%;
+}
+.pretty-form .field-textarea{
+    height: 100px;
+}
+.pretty-form input[type=submit], .pretty-form input[type=button]{
+    background: #4B99AD;
+    padding: 8px 15px 8px 15px;
+    border: none;
+    color: #fff;
+}
+.pretty-form input[type=submit]:hover, .pretty-form input[type=button]:hover{
+    background: #4691A4;
+    box-shadow:none;
+    -moz-box-shadow:none;
+    -webkit-box-shadow:none;
+}
+.pretty-form .required{
+    color:red;
+}
