--- a/views/about.jade
+++ b/views/about.jade
@@ -5,5 +5,5 @@ block content
     h2.post_title
       About
     div.post_body
-      p This is a blogsite, by David Hines, mainly built as a project to learn more about nodejs, express, and mongodb.
-      p David Hines is a software developer from Nova Scotia, Canada. He started off writing desktop java solutions, then naturally learned J2EE, and now works mainly with the javascript stack.
+      p This is a blogsite built by David Hines as a project to learn more about nodejs, express, and mongodb.
+      p David Hines is a software developer from Nova Scotia, Canada. He started off writing desktop java solutions, then learned J2EE, and now works mainly with the javascript stack.
