--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/app.css')
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css')
   body
+    h1 David A Hines
     div.nav_links
       ul.nav_ul
         li.nav_li
