--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -220,3 +220,24 @@ input.unstyled, button.unstyled, submit.unstyled {
   color:blue;
   cursor: pointer;
 }
+
+.right_nav{
+  float:right;
+  background-color: #f1f1f1;
+  text-align: center;
+}
+ul.right_nav_list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li.right_nav_link a {
+    display: block;
+    width: 60px;
+    color: #000;
+    padding: 8px 16px;
+}
+li.right_nav_link a:hover {
+    background-color: #555;
+    color: white;
+}
