--- a/views/index.jade
+++ b/views/index.jade
@@ -12,13 +12,13 @@ block content
     h2.post_title
       a.post_title(href=post.title) #{post.title}
     p.post_date_created #{moment(post.date_created.format).format('M/DD/YYYY')}
-    div.post_body(id=post._id)
+    div.post_body(id=post._id) #{post.body}
     script(type='text/javascript')
       |   $(document).ready(function(){
-      |     var converter = new showdown.Converter(),
-      |     text      = `#{post.body}`,
-      |     html      = converter.makeHtml(text);
+      |     var source = document.getElementById("#{post._id}");
       |     var target = document.getElementById("#{post._id}");
+      |     converter = new showdown.Converter(),
+      |     html = converter.makeHtml(source.innerHTML);
       |     target.innerHTML = html;
       |   });
     p.post_author Posted by #{post.author}
