--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,4 +21,6 @@ html
           a.nav_link(href="https://www.linkedin.com/in/david-hines-31363822/") LinkedIn
         li.nav_li
           a.nav_link(href="/about") About
+        li.nav_li
+          a.nav_link(href="/posts") Admin
     block content
