--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,9 @@ block content
       each post in posts
         li.right_nav_link
           a.post_title(href="/posts/#{post._id}") #{post.title}
+  #message      
+  if message
+    h1.text-center.error-message #{message}
   div.blog_post
     h2.post_title
       a.post_title(href=post.title) #{post.title}
