--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,4 +23,6 @@ html
           a.nav_link(href="/about") About
         li.nav_li
           a.nav_link(href="/posts") Admin
+        li.nav_li(id='logout_button')
+          a.nav_link(href="/logout") Logout
     block content
