--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,10 @@ block content
       each post in posts
         li.right_nav_link
           a.post_title(href="/posts/#{post._id}") #{post.title}
-  #message      
+  #message
   if message
-    h1.text-center.error-message #{message}
+    div.error_border
+      h1.text-center.error-message #{message}
   div.blog_post
     h2.post_title
       a.post_title(href=post.title) #{post.title}
