--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -235,7 +235,6 @@ ul.right_nav_list{
 }
 li.right_nav_link a {
     display: block;
-    width: 60px;
     color: #000;
     padding: 8px 16px;
 }
@@ -252,4 +251,16 @@ li.right_nav_link a:hover {
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 0px solid #000000;
+}
+
+.text_align_left{
+  text-align: left;
+}
+
+.text_center{
+  text-align: center;
+}
+
+.no_margin {
+  margin: 0;
 }
