--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,8 +21,9 @@ html
           a.nav_link(href="https://www.linkedin.com/in/david-hines-31363822/") LinkedIn
         li.nav_li
           a.nav_link(href="/about") About
-        li.nav_li
-          a.nav_link(href="/posts") Admin
-        li.nav_li(id='logout_button')
-          a.nav_link(href="/logout") Logout
+        if authenticated
+          li.nav_li
+            a.nav_link(href="/posts") Admin
+          li.nav_li(id='logout_button')
+            a.nav_link(href="/logout") Logout
     block content
